# Minimal-Cuda

./: .gitignore  CMakeLists.txt  README.md  build_script.sh  main.cpp  montecarlo_kernels.cu  montecarlo_kernels.h
